--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Build
       run: swift build --build-tests
     - name: Test
-      run: swift test:
+      run: swift test
      
   macOSBuild:
     name: macOS - Latest
