--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,11 +9,11 @@ jobs:
     strategy:
       matrix:
         swift-version: [3.1.1, 4.1.3, 4.2.4, 5.0.3, 5.1.1]
-        os: [ubuntu-16.04]
+        os: [ubuntu-20.04]
     
     steps:
     - name: Install Swift
-      uses: YOCKOW/Action-setup-swift@master
+      uses: YYOCKOW/Action-setup-swift@v1
       with:
           swift-version: ${{ matrix.swift-version }}
     - name: Checkout
