--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        swift-version: [4.2.4, 5.0.3, 5.1.5]
+        swift-version: [5.1.5, 5.5.2]
         os: [ubuntu-18.04]
     
     steps:
